--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   grid-template-columns: 200px 1fr;
   max-width: 900px;
   margin: 0 auto;
-  background-color: white;
+  background-color: rgb(210, 202, 184,0.3);
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
